<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<resources>
    <string name="app_name">OST</string>

    <string name="cancel">Cancel</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="fingerprint_success">Fingerprint Successful</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="authorize">Authorize</string>
    <string name="authorize_sub_heading">Would you like to use biometrics to authenticate your wallet?</string>
    <string name="fingerprint_check_status">Touch the fingerprint sensor</string>
    <string name="enable_biometric">Enable Biometric?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_progress_msg">Loading...</string>
    <string name="dialog_action_ok">Ok</string>
    <string name="dialog_error_title">Error</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_users">Users</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_settings">Settings</string>
    <string name="enter_mnemonics_sub_heading">Please enter the 12-word mnemonic phrase that you wrote down.</string>
    <string name="enter_mnemonics_hint_phrase">Enter mnemonic Phrase...</string>
    <string name="enter_mnemonics_recover_wallet">Recover Wallet</string>
    <string name="btn_text_verify_data">Verified</string>
    <string name="btn_deny_request">Deny Request</string>

    <!--Create Account Fragment-->
    <string name="create_account_economy_hint">Test Economy</string>
    <string name="create_account_username_hint">Username</string>
    <string name="create_account_password_hint">Password</string>

    <!--Create Session-->
    <string name="create_session_heading">Authorizing a session obviates the need for the user to sign every transaction within the application, thereby creating a more seamless user experience</string>
    <string name="create_session_spending_limit">Spending Limit for Session</string>
    <string name="create_session_unit">Unit</string>
    <string name="create_session_expiry_days">Set Expiry for Session in Days</string>

    <!--Transaction-->
    <string name="transaction_amount">Amount</string>
    <string name="transaction_unit">Unit</string>

    <string name="view_mnemonics_heading">Write down your 12-word mnemonic phrase and store them securely</string>
    <string name="view_mnemonics_tip">Tip: \nThis mnemonic phrase can be used to authorize a device. The order of the words is important, so please be sure to write it down carefully.\n</string>

    <!--Pin fragment -->
    <string name="pin_sub_heading_add_pin">Add a 6-digit PIN to secure your wallet.\n The PIN is required to recover your\n wallet if you lose your phone.</string>
    <string name="pin_sub_heading_confirm_pin">If you forget your PIN, you cannot\n recover your Wallet. So please be sure\n to remember it.</string>
    <string name="pin_sub_heading_current_pin">Enter your 6-digit PIN to authorize\n Reset Pin.</string>
    <string name="pin_sub_heading_get_pin" >Enter your 6-digit PIN to authorize</string>
    <string name="terms_policies" >By Creating Your Wallet, you Agree to our</string>
    <string name="terms_of_service" >Terms Of Service</string>
    <string name="and" > and </string>
    <string name="privacy_policy" >Privacy Policy</string>


    <!--QR fragment-->
    <string name="qr_sub_heading_economy_scan">Please scan the QR code or click on the \"Connect to Economy\" button in your invitation email.</string>
    <string name="qr_sub_heading_authorize_scan">Scan the QR code to complete action</string>

    <!-- Wallet Setup -->
    <string name="wallet_being_setup">Your Wallet is being Setup</string>
    <string name="wallet_setup_text">The Wallet setup process takes about 30 seconds. You can continue to use the app and we’ll notify when the wallet is ready to use.</string>
    <string name="no_transactions_title">No Transactions Completed!</string>
    <string name="no_transactions_text">Looks like you have not made any transactions, send some tokens to other users.</string>

    <!--Enter mnemonics-->
    <string name="invalid_passphrase">Invalid Mnemonics passed</string>
</resources>
