<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fingerprint_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorize"
            android:textColor="#de000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/authorize_sub_heading"
            android:textColor="#8a000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fingerprint_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="23dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fingerprint_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/description_fingerprint_icon"
            android:src="@drawable/ic_fingerprint_check"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/fingerprint_status"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_check_status"
            android:textColor="#8a000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fingerprint_bottom"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cancel_button"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="#ff5e54"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>